# rehlds-m

./: .clang-format  .clang-tidy  .gitignore  .pvs-studio  CMakeLists.txt  CMakePresets.json  README.md  sonar-project.properties
.github/: release-drafter.yml
.github/workflows/: build.yml  format.yml  release-drafter.yml  sonarcloud.yml
cmake/: Clang.cmake  ClangCL.cmake  CodeAnalysis.cmake  CompileDefinitions.cmake  Config.cmake  GNU.cmake  GetGitRevisionDescription.cmake  IntelLLVM.cmake  Linux.cmake  MSVC.cmake  UnitTests.cmake  Windows.cmake
common/: CMakeLists.txt
common/include/common/: hlds_module.h  interface.h  object_container.h  object_list.h  platform.h  system.h
common/include/common/interfaces/: dedicated_exports.h  dedicated_serverapi.h  filesystem.h  system_base.h  system_module.h  vgui_module.h
common/src/: interface.cpp  object_list.cpp  system.cpp
common/test/: test_object_list.cpp
dedicated/: CMakeLists.txt  hlds.exe.manifest.in  resource.rc.in
dedicated/src/: arguments.cpp  arguments.h  command_line.cpp  command_line.h  dedicated.cpp  dedicated.h  dedicated_exports.cpp  main.cpp  sleep.h  throw_exception.cpp
dedicated/src/console/: text_console.cpp  text_console.h  text_console_unix.cpp  text_console_unix.h  text_console_windows.cpp  text_console_windows.h
dedicated/test/: test_command_line.cpp
engine/: CMakeLists.txt  resource.rc.in
libs/cpputils/: CMakeLists.txt
libs/cpputils/atexit/: CMakeLists.txt
libs/cpputils/atexit/include/cpputils/: at_exit.h
libs/cpputils/atexit/src/: at_exit.cpp
libs/cpputils/singleton/: CMakeLists.txt
libs/cpputils/singleton/include/cpputils/: singleton_holder.h
libs/cpputils/string/: CMakeLists.txt
libs/cpputils/string/include/cpputils/: cstring.h  format.h  string.h  string_const.h
libs/cpputils/string/src/: cstring.cpp  string.cpp
libs/cpputils/string/test/: test_cstring.cpp  test_string.cpp
libs/cpputils/system/: CMakeLists.txt
libs/cpputils/system/include/cpputils/: system.h  system_linux.h  system_windows.h
libs/cpputils/system/src/: system_linux.cpp  system_windows.cpp
libs/strformat/: CMakeLists.txt
libs/strformat/include/strformat/: format.h
libs/strtools/: CMakeLists.txt
libs/strtools/include/strtools/: const.h  cstring.h  string.h
libs/strtools/src/: cstring.cpp  string.cpp
libs/strtools/test/: test_cstring.cpp  test_string.cpp
